css/style.css
/* general */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: grey;
    font-family: 'Roboto', sans-serif;
}
/* /general */

/* intestazione */
header {
    background-color: #000;
    display: flex;
    z-index: 10;
    justify-content: space-around;
    align-items: center;
    position: fixed;
    width: 100%;
}

header .logo {
    margin: 10px 0px;
}

header #search {
    height: 30px;
    width: 180px;
    padding-left: 5px;
}

header button {
    height: 30px;
    width: 30px;
}
/* /intestazione */

/* corpo principale */
.container {
    width: 80%;
    margin: auto;
    padding-top: 150px;
    display: flex;
    flex-direction: column;
}

.overline {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    color: #fff;
    text-shadow: 4px 4px 2px rgba(0, 0, 0, 1);
}

.tagline {
    font-size: 50px;
    margin-bottom: 20px;
}

.card_name {
    color: #fff;
    text-shadow: 4px 4px 2px rgba(0, 0, 0, 1);
    font-size: 30px;
    margin-bottom: 10px;
    margin-left: 20px;
}

.card-wrapper {
    display: flex;
    overflow-x: scroll;
}

.card {
    border: 1px solid #fff;
    min-width: 302px;
    max-width: 302px;
    height: 452px;
    margin-bottom: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000;
    margin-right: 30px;
}

.imgError {
    color: #fff;
}

.fadeInDown {
    -webkit-animation-name: fadeInDown;
    animation-name: fadeInDown;
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    }

    @-webkit-keyframes fadeInDown {
    0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
    }
    100% {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
    }
    }

    @keyframes fadeInDown {
    0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
    }
    100% {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
    }
    } 

.overview {
    display: none;
    color: #fff;
    height: 90%;
    width: 90%;
    margin: auto;
    font-size: 12px;
}

.overview p {
    margin-bottom: 5px;
}

.poster-film {
    max-height: 450px;
}

.language {
    display: flex;
    align-items: center;
}

.language-flag {
    height: 20px;
    margin-left: 10px;
}

.container-trailer {
    display: flex;
    justify-content: center;
}

.trailer {
    color: #fff;
    font-size: 20px;
    font-weight: 600;
}

/* .poster-film {
    display: none;
} */

.card:hover .poster-film{
    display: none;
    cursor: pointer;
}

.card:hover .overview {
    display: block;
    cursor: pointer;
}

.card:hover .imgError {
    display: none;
}

.yellow {
    color: yellow;
}

